<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <LinearLayout
        android:id="@+id/weather_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/place_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_place"
                android:layout_width="@dimen/dimen_20"
                android:layout_height="@dimen/dimen_20"
                android:src="@drawable/ic_place_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/place"
                style="@style/os_reg_white_14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Россия, г. Екатеринбург" />

            <ImageView
                android:id="@+id/update"
                android:layout_width="@dimen/dimen_20"
                android:layout_height="@dimen/dimen_20"
                android:src="@drawable/ic_update_48"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginBottom="@dimen/dimen_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_weather"
                android:layout_width="@dimen/dimen_size_110"
                android:layout_height="@dimen/dimen_size_110"
                android:layout_marginHorizontal="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_5"
                android:src="@drawable/icn_sunny" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5"
                android:layout_marginTop="@dimen/dimen_5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temperature_now"
                        style="@style/os_reg_white_50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_5"
                        tools:text="+28" />

                    <TextView
                        android:id="@+id/unit"
                        style="@style/os_reg_white_26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_celsius" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/feels_like"
                        style="@style/os_reg_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_5"
                        android:text="@string/feels_like" />

                    <TextView
                        android:id="@+id/feels_like_degrees"
                        style="@style/os_reg_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="+26" />

                    <TextView
                        android:id="@+id/feels_like_unit"
                        style="@style/os_reg_gray_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_5"
                        android:text="@string/unit_celsius" />
                </LinearLayout>

                <TextView
                    android:id="@+id/weather_status"
                    style="@style/os_reg_gray_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Ясно" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hourly_weather_forecast_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_95"
        android:layout_marginVertical="@dimen/dimen_20"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dimen_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_card"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/item_hourly_weather_forecast" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:background="@drawable/bg_card"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dimen_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hourly_weather_forecast_recycler_view">

        <LinearLayout
            android:layout_width="@dimen/dimen_size_50"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_size_30"
                android:layout_height="@dimen/dimen_size_30"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_air_24"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wind"
                    style="@style/os_reg_white_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="4" />

                <TextView
                    android:id="@+id/unit_wind"
                    style="@style/os_reg_white_12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:gravity="bottom"
                    android:text="@string/unit_ms" />

            </LinearLayout>

            <TextView
                android:id="@+id/direction"
                style="@style/os_reg_white_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="СЗ" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dimen_size_50"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_size_30"
                android:layout_height="@dimen/dimen_size_30"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_drop_24"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/humidity"
                    style="@style/os_reg_white_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="45" />

                <TextView
                    android:id="@+id/unit_humidity"
                    style="@style/os_reg_white_12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:gravity="bottom"
                    android:text="@string/unit_percent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dimen_size_50"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_size_30"
                android:layout_height="@dimen/dimen_size_30"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:src="@drawable/ic_barometer"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pressure"
                    style="@style/os_reg_white_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="743" />

            </LinearLayout>

            <TextView
                android:id="@+id/unit_pressure"
                style="@style/os_reg_white_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/unit_mm_of_mercury" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dimen_size_50"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_size_30"
                android:layout_height="@dimen/dimen_size_30"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_ultraviolet"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/uv"
                    style="@style/os_reg_white_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="4" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>